# localstack-demo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.localstack/: default.env
infra/: main.tf
infra/my_module/: cloudwatch.tf  data.tf  dynamodb.tf  iam.tf  lambda.tf  s3.tf
infra/test_module/: data.tf  iam.tf  lambda.tf  s3.tf  sqs.tf
scripts/: init.sh  invoke_dockerhub_to_s3_lambda_function.sh  invoke_s3_to_dynamodb_lambda_function.sh  localstack_init.sh  old.sh  poetry_init.sh
src/: handler.py
src/dockerhub_to_s3/: docker_api_client.py  handler.py  pipeline.py  result.json
src/dockerhub_to_s3/mock/: 2023_09_14_150000.json  2023_09_15_150500.json  2023_09_15_154316.json  2023_09_15_200000.json  2023_10_30_154316.json
src/s3_to_dynamodb/: event_parser.py  handler.py  pipeline.py
src/s3_to_dynamodb/mock/: mock_s3_event_notifications.json
tests/functional/src/dockerhub_to_s3/: conftest.py  handler_test.py
tests/unit/src/dockerhub_to_s3/: conftest.py  docker_api_client_test.py  handler_test.py  pipeline_test.py
tests/unit/src/s3_to_dynamodb/: conftest.py  handler_test.py
