[tool.poetry]
name = "local-stack"
version = "0.1.0"
description = ""
authors = ["Vittorio Polverino"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.5.1"
ruff = "^0.0.285"
black = "^23.7.0"
bandit = "^1.7.5"
localstack = "^2.3.2"
terraform-local = "^0.16.0"
awscli-local = "^0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
